# Edytor-obraz

edytorZdjec/: CMakeLists.txt  main.cpp
